# agents

./: README.md
examples/: README.md  pair-count.scm
experiments/: README.md
experiments/01-pair-agent/: README.md  generate-agent.scm  pair-count.scm
experiments/02-memory/: CMakeLists.txt  DesignNotes-L.md  README.md
experiments/02-memory/notebook/: 01-build-system.md  02-file-reader-pipeline.md  README.md
experiments/02-memory/scm/: CMakeLists.txt  build-memory.scm.in  file-reader.scm  start.scm
experiments/pair-agent/: Design-Generate.md  count-agent.scm
scm/pair-agent/: Design-Generate.md  README.md  count-agent.scm  generate-agent.scm
